--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,15 @@
   <title>Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="icon" type="image/x-icon" href="assets/fav.io.png">
+  
+
+  
 </head>
 <body>
   <app-root></app-root>
+
+  
 </body>
 </html>
